@@ -29,6 +29,7 @@ BATCH_DIST = $(ROOTDIR)/makedist.bat
 BATCH_ALL = $(ROOTDIR)/makejade.bat
 BATCH_EXAMPLES = $(ROOTDIR)/makeexamples.bat
 BATCH_JESSEXAMPLE = $(ROOTDIR)/makejessexample.bat
+BATCH_JADEJESSPROTEGEEXAMPLE = $(ROOTDIR)/makejadejessprotegeexample.bat
 BATCH_DOC = $(ROOTDIR)/makedoc.bat
 BATCH_LIB = $(ROOTDIR)/makelib.bat
 BATCH_CLEAN = $(ROOTDIR)/clean.bat
@@ -58,6 +59,7 @@ export JFLAGS
 export BATCH_ALL
 export BATCH_EXAMPLES
 export BATCH_JESSEXAMPLE
+export BATCH_JADEJESSPROTEGEEXAMPLE
 export BATCH_DOC
 export BATCH_LIB
 export BATCH_CLEAN
@@ -86,6 +88,10 @@ jessexample: $(CLSDIR)
 	cd $(EXAMPLESDIR)/jess; $(MAKE) all
 	@echo Jess example built.
 
+jadejessprotegeexample: $(CLSDIR)
+	cd $(EXAMPLESDIR)/JadeJessProtege; $(MAKE) all
+	@echo JadeJessProtege example built.
+
 clean:
 	rm -f `find . -name '*~'`
 	rm -f `find . -name '#*#'`
@@ -104,6 +110,7 @@ realclean: clean
 	rm -f $(BATCH_DIST)
 	rm -f $(BATCH_EXAMPLES)
 	rm -f $(BATCH_JESSEXAMPLE)
+	rm -f $(BATCH_JADEJESSPROTEGEEXAMPLE)
 	rm -f $(BATCH_DOC)
 	rm -f $(BATCH_LIB)
 	rm -f $(BATCH_CLEAN)
@@ -181,6 +188,7 @@ batch: $(CLSDIR) $(DOCDIR)
 	cd $(SRCDIR); $(MAKE) batch
 	cd $(EXAMPLESDIR); $(MAKE) batch
 	cd $(EXAMPLESDIR)/jess; $(MAKE) batch
+	cd $(EXAMPLESDIR)/JadeJessProtege; $(MAKE) batch
 	cd $(DEMODIR); $(MAKE) batch
 	cd $(DOCDIR); $(MAKE) batch
 	cd $(LIBDIR); $(MAKE) batch
