@@ -1,0 +1,30 @@
+# Makefile for JADE project - examples/JadeJessProtege directory
+
+# The following targets are not file names
+.PHONY: all clean
+
+JC = javac
+JFLAGS = -deprecation
+TARGETS = JadeJessProtege/JadeJessAgent.java
+
+all: 
+	@echo Making JadeJessProtege example
+	$(JC) $(JFLAGS) -classpath $(CLASSPATH):$(SRCDIR):$(CLSDIR) $(TARGETS)
+
+clean:
+	rm -f `find . -name '*~' -print`
+	rm -f `find . -name '#*#' -print`
+
+batch:
+	rm -f $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo '@REM ===============================================================' > $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo '@REM =           Generated by JADE Makefile. DO NOT EDIT           =' >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo '@REM ===============================================================' >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo 'Remind to set the CLASSPATH to include the jess 6.0 packages' >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo 'cd src\examples' >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo '$(JC) $(subst /,\,$(subst $(ROOTDIR),..\..,$(JFLAGS))) -classpath %CLASSPATH%;..;..\..\classes $(subst /,\,$(TARGETS))' >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+	echo >> $(BATCH_JADEJESSPROTEGEEXAMPLE)
+
+
