@@ -16,6 +16,7 @@ MAJOR CHANGES since JADE 2.2 ($Date$ $Name$)
 - Passed the FIPA Compliance Test of Motorola:
   - Catched exception in initfromIOR 
   - Matched the ServiceDescription also against the user-defined properties
+- Added the JadeJessProtege example kindly provided by Oliver Hoffmann.
 	
 MAJOR CHANGES in JADE 2.2 ($Date$ $Name$)
 ======================================================	
